[GSCKATA-8] Implement Kata using Java 8 Lambda preview w/ JCF
git-svn-id: svn+ssh://gsckata.svn.services.gs.com/svnroot/gsckata/branches/solutions-java8-jcf@18 66aded80-052e-4344-91a8-38ab96726eea